--- a/BlazorApp7/BlazorApp7/Components/App.razor
+++ b/BlazorApp7/BlazorApp7/Components/App.razor
@@ -5,8 +5,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    @* <link rel="stylesheet" href="@Assets["app.css"]" /> *@
-    @* <link rel="stylesheet" href="@Assets["BlazorApp7.styles.css"]" /> *@
     <link rel="stylesheet" href="@Assets["css/app.css"]" />
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -16,6 +14,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="js/site.js"></script>
 </body>
 
 </html>
