--- a/BlazorApp7/BlazorApp7/Components/Layout/MainLayout.razor
+++ b/BlazorApp7/BlazorApp7/Components/Layout/MainLayout.razor
@@ -14,7 +14,7 @@
     <footer class="py-6 md:px-8 md:py-0">
         <div class="container flex flex-col items-center justify-between gap-4 md:h-24 md:flex-row">
             <p class="text-muted-foreground text-balance text-center text-sm leading-loose md:text-left">
-                &copy; 2024 playhard sportsim
+                &copy; 2024 BlazorApp7
             </p>
         </div>
     </footer>
