--- a/BlazorApp7/BlazorApp7/Components/Pages/Home.razor
+++ b/BlazorApp7/BlazorApp7/Components/Pages/Home.razor
@@ -3,6 +3,7 @@
 
 <PageTitle>Home</PageTitle>
 
+<p>Hello, world</p>
 <div class="border-accent-foreground max-w-8xl text-4xl font-bold">
     Welcome to your new app. How are you feeling today?
 </div>
